syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enum.proto";

message RPC_User_Types {
    message UpdateAbout {
        message Param {
            string NewAbout = 1;
        }

        message Response {
            bool Done =1;
            PB_Error Error = 2;
            PB_SelfUserView SelfUserView =3;
        }
    }

    message UpdateUserName {
        message Param {
            string NewUserName = 1;
        }

        message Response {
            bool Done =1;
            PB_Error Error = 2;
            PB_SelfUserView SelfUserView =3;
        }
    }

    message ChangeAvatar {
        message Param {
            bool None = 1;
            bytes ImageData2 = 2;
        }

        message Response {
            bool Done =1;
            PB_Error Error = 2;
            PB_SelfUserView SelfUserView =3;
        }
    }

    message ChangePrivacy {
        message Param {
            ProfilePrivacyLevelEnum Level = 1;
        }

        message Response {
            bool Done =1;
            PB_Error Error = 2;
            PB_SelfUserView SelfUserView =3;
        }
    }
}

service RPC_User {
   // rpc GetBlockedList (PB_UserParam_BlockedList) returns (PB_UserResponse_BlockedList);//to pages 
    rpc UpdateAbout (RPC_Auth_User.UpdateAbout.Param) returns (RPC_Auth_User.UpdateAbout.Response);
    rpc UpdateUserName (RPC_Auth_User.UpdateUserName.Param) returns (RPC_Auth_User.UpdateUserName.Response);
    rpc ChangePrivacy (RPC_Auth_User.ChangePrivacy.Param) returns (RPC_Auth_User.ChangePrivacy.Response);
    rpc ChangeAvatar (RPC_Auth_User.ChangeAvatar.Param) returns (RPC_Auth_User.ChangeAvatar.Response);
    //rpc CheckUserName (RPC_Auth_User.UpdateUserName.Param) returns (RPC_Auth_User.UpdateUserName.Response); //to others
}
